<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <TextView
            android:id="@+id/subscriptionNameHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_default"
            android:layout_marginTop="@dimen/space_default"
            android:text="@string/subscription_title_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/subscriptionName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_2x"
            android:layout_marginTop="@dimen/space_default"
            android:background="@null"
            android:drawableEnd="@drawable/ic_edit_24"
            android:hint="@string/name_hint"
            android:inputType="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subscriptionNameHeader"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/expirationDateHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_default"
            android:layout_marginTop="@dimen/space_4x"
            android:text="@string/expiration_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subscriptionName" />

        <TextView
            android:id="@+id/expirationDate"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_2x"
            android:layout_marginTop="@dimen/space_2x"
            android:background="@null"
            android:drawableEnd="@drawable/ic_edit_24"
            android:hint="@string/date_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expirationDateHeader" />

        <TextView
            android:id="@+id/priceHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_default"
            android:layout_marginTop="@dimen/space_4x"
            android:text="@string/price_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expirationDate" />

        <TextView
            android:id="@+id/priceCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_2x"
            android:layout_marginTop="@dimen/space_default"
            android:hint="@string/price_currency"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priceHeader"
            tools:ignore="Autofill" />


        <EditText
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_default"
            android:layout_marginTop="@dimen/space_default"
            android:layout_marginEnd="@dimen/space_2x"
            android:background="@null"
            android:drawableEnd="@drawable/ic_edit_24"
            android:hint="@string/price_hint"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/priceCurrency"
            app:layout_constraintTop_toBottomOf="@id/priceHeader"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/infoCloseButton"
            style="@style/ButtonDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_default"
            android:text="@string/close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/infoDeleteButton" />

        <Button
            android:id="@+id/infoDeleteButton"
            style="@style/ButtonDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_default"
            android:text="@string/delete"
            android:backgroundTint="@color/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/infoCloseButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>